--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
   <body>
     <div id="btnDiv">
-      <button id="closeTogg">X</button>
+      <button id="closeTogg">☰</button>
     </div>
-    <div id="navDiv">
+    <div id="navDiv" style="display: none">
       <nav id="nav_placeholder"></nav>
     </div>
     <script src="js/navigation.js"></script>
