--- a/news1.html
+++ b/news1.html
@@ -39,10 +39,10 @@
 
   <body>
     <div id="btnDiv">
-      <button id="closeTogg">X</button>
+      <button id="closeTogg">☰</button>
     </div>
-    <div id="navDiv">
-      <div id="nav_placeholder"></div>
+    <div id="navDiv" style="display: none">
+      <nav id="nav_placeholder"></nav>
     </div>
     <script src="js/navigation.js"></script>
 
