Popravljen prikaz na desktopu i tabletu; radi sve

--- a/curriculum.html
+++ b/curriculum.html
@@ -36,7 +36,7 @@
     <div id="btnDiv">
       <button id="closeTogg">☰</button>
     </div>
-    <div id="navDiv" style="display: none">
+    <div id="navDiv">
       <nav id="nav_placeholder"></nav>
     </div>
     <script src="js/navigation.js"></script>
