--- a/aboutUs.html
+++ b/aboutUs.html
@@ -41,7 +41,7 @@
     <div id="btnDiv">
       <button id="closeTogg">☰</button>
     </div>
-    <div id="navDiv" style="display: none">
+    <div id="navDiv">
       <nav id="nav_placeholder"></nav>
     </div>
     <script src="js/navigation.js"></script>
@@ -458,36 +458,36 @@
     </div>
 
     <div id="mobileRightBar">
-        <ul id="wrapper">
-          <li>
-            <a href="#ourValues">
-              <iconify-icon icon="mdi:lightning-bolt"></iconify-icon>
-              <!-- <span
+      <ul id="wrapper">
+        <li>
+          <a href="#ourValues">
+            <iconify-icon icon="mdi:lightning-bolt"></iconify-icon>
+            <!-- <span
                 class="iconify"
                 data-icon="mdi-lightning-bolt"
                 data-inline="false"
               >
               </span> -->
-            </a>
-          </li>
-          <li>
-            <a href="#history">
-              <i class="bi bi-arrow-counterclockwise"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#algebraGroup">
-              <i class="bi bi-people-fill"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#directions">
-              <i class="bi bi-compass-fill"></i>
-            </a>
-          </li>
-        </ul>
+          </a>
+        </li>
+        <li>
+          <a href="#history">
+            <i class="bi bi-arrow-counterclockwise"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#algebraGroup">
+            <i class="bi bi-people-fill"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#directions">
+            <i class="bi bi-compass-fill"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-    
+
     <div id="foot_placeholder"></div>
     <script src="js/footer.js"></script>
   </body>
