--- a/index.html
+++ b/index.html
@@ -7,20 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Početna stranica projekta iz SUPIT-a" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="jquery-ui-dist/jquery-ui.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/navigation.css" />
     <link rel="stylesheet" href="css/form.css" />
@@ -43,7 +35,7 @@
       <img src="images/Algebra-blackBackground.jpg" alt="Algebra-black-logo" />
     </div>
 
-    <div style="position: relative; text-align: center">
+    <div id="myVideoDiv">
       <video autoplay muted loop id="myVideo">
         <source src="videos/typingOnlaptop.mp4" type="video/mp4" />
       </video>
