--- a/news1.html
+++ b/news1.html
@@ -7,28 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="World Skills 2019." />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
     />
     <link rel="stylesheet" href="jquery-ui-dist/jquery-ui.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/specificNews.css" />
     <link rel="stylesheet" href="css/specificNews1.css" />
     <link rel="stylesheet" href="css/navigation.css" />
-    <link rel="stylesheet" href="css/rightBar.css" />
+    <link rel="stylesheet" href="css/rightNav.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
@@ -74,10 +66,16 @@
     </div>
     <div id="galDiv">
       <a data-fancybox="gallery" href="images/galerija1.jpg"
-        ><img class="small" src="images/galerija1.jpg"
+        ><img
+          class="small"
+          src="images/galerija1.jpg"
+          alt="Medalja sa natjecanja"
       /></a>
       <a data-fancybox="gallery" href="images/galerija2.jpg"
-        ><img class="small" src="images/galerija2.jpg"
+        ><img
+          class="small"
+          src="images/galerija2.jpg"
+          alt="Studenti na Algebri"
       /></a>
     </div>
     <div id="videoDiv">
